css/style.css
:root {
  --text-color: black;
  --primary-color:  #fff200;
  --secondary-color: #ff4ae4;
  --background-color: #8ed7f9;
}

body {
  font-family: 'Bebas Neue', sans-serif;
  overflow-x: hidden;
  background-color: var(--background-color);
}

body::-webkit-scrollbar{
  display: none;
}

header {
  text-align: center;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

header img:hover {
  animation: shake 0.5s;
  animation-iteration-count: infinite;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}


.logo {
  width: 20rem;
  margin-top: 10px;
}

.ball{
  width: 5rem;
  margin-left: 50px;
  margin-right: 50px;
}

.pokemon-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  max-width: 100%;
}

.listitem {
 list-style-type: none;
 width: 99%;
}

.pokemon-button {
  background-color: var(--primary-color);
  border: 0.5rem solid var(--secondary-color);
  margin: 10px 20px 10px 20px;
  padding: 20px;
  font-family: inherit;
  font-size: 3rem;
  width: 97%;
  cursor: pointer;
}

.pokemon-button:hover {
  transform: scale(1.03);
  
  max-width: 99%;
}

#modal-container {
  display: none;
}

#modal-container.is-visible {
  position: fixed;
  padding: 20px;
  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.5);

  /* to show it above other content */
  z-index: 999; 
  /* to allow scrolling if the screen is not high enough*/
  overflow: auto; 
  /* this is used to center the modal */
  display: grid;
  text-align: center;
}


.modal {
  margin: auto;
  display: inline-block;
  box-sizing: border-box;
  background: #fff;
  background-color: var(--primary-color);
  border: 0.5rem solid var(--secondary-color);
  padding: 15px;
  width: 100%;
  max-width: 700px;
  text-align: center;
}

.modal-close {
  float: right;
  -webkit-appearance: none;
  border: 0;
  background: none;
  color: var(--text-color);
  font-size: 20px;
  font-weight: bold;
}

.modal h1 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 50px;
}

.modal p {
  margin-bottom: 0;
  margin-top: 5px;
  font-size: 30px;
  font-weight: bold;
}

.pokemon-image {
  height: 200px;;
}

footer {
  margin: 20px;
  text-align: center;
}

.footer-image {
  width: 2rem;
  margin: 0px 10px 5px 10px;
}

footer img:hover {
  animation: shake 0.5s;
  animation-iteration-count: infinite;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

